# fieldEngineBundle

./: .gitignore  .gitmodules  AGENTS.md  AI_DEVELOPMENT_SUMMARY.md  AUTOTUNE_HANDOFF.md  AsciiVisualizer.cpp  AtomicOscillator.h  AuthenticEMUZPlane.cpp  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.backup  DSP_VERIFICATION.md  EMUFilter.cpp  EMUFilter.h  EMUFilterModels.h  EMU_DATA_VERIFICATION.md  EMU_TEST_PLUGIN_GUIDE.md  MorphFilter.cpp  MorphFilter.h  QUICK_WINS_IMPLEMENTED.md  README.md  TODO.md  ZPlaneTables.h  ai_agent_prompts.md  all_presets.csv  batch_test.csv  build_log.txt  comprehensive_dsp_verification_report.md  dsp_analysis_accurate.py  dsp_verifier_agent.py  enhanced_test.csv  filter_requests_rom_0_device_0.syx  mock-parallel-demo.ps1  morphEngine_spec.json  pluginval_morphEngine.txt  read this.txt  skin.json  temp_patch.py  test_all_presets.csv  test_presets.csv
.ai/claude_tasks/: emu_wet_only_and_stability.md
A2K/A2K_USER/: 00_0000_HOUSE.syx  00_0001_Hollographik.syx  00_0002_LoveAll.syx  00_0003_Scuzzy.syx  00_0010_Lustup.syx  00_0012_Zonk.syx  00_0015_BoogySynth.syx  00_0017_Buckzawz.syx  00_0022_TempoLFOs.syx  00_0023_OscilloBox.syx  00_0024_FLutter.syx  00_0032_WeAreEvil.syx  00_0035_FoldingSpace.syx  00_0039_MANTIS.syx  00_0040_YouKnowIt.syx  00_0041_ToxicVox.syx  00_0042_DeeperLove.syx  00_0045_KeyHole.syx  00_0046_NewsAtTen.syx  00_0049_theGrind.syx  00_0050_Fundamentals.syx  00_0051_Tronix.syx  00_0053_Vice.syx  00_0055_Bassoloid.syx  00_0056_ClassicBase.syx  00_0057_Glissynth.syx  00_0060_Anthill.syx  00_0061_AxisSaw.syx  00_0062_Bouchete.syx  00_0063_Risen.syx  00_0066_Squeaky.syx  00_0068_Phrophetics.syx  00_0070_Wire.syx  00_0071_Plastik.syx  00_0072_SineDrum.syx  00_0073_Exel.syx  00_0074_CricketGruve.syx  00_0078_Trance.syx  00_0079_Whisper.syx  00_0080_BasicSaw.syx  (+206 more)
A2K/AUDTY/: 00_0000_NordicaComp.syx  00_0002_BigDandyBoy.syx  00_0005_AudKlav.syx  00_0008_WindUpToi.syx  00_0013_GateGirl.syx  00_0015_Sync4Seqence.syx  (+82 more)
Ghost/: README.md
HardTunePlugin_with_Color_UI/HardTune/: CMakeLists.txt  README.md
HardTunePlugin_with_Color_UI/HardTune/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
archive/legacy/enginesSecretSauce/: CLAUDE.md  CMakeLists.txt
archive/legacy/enginesSecretSauce/Source/: AuthenticEMUZPlane.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SecretSauceEngine.cpp  SecretSauceEngine.h
archive/legacy/morphEngine/: CMakeLists.txt
archive/legacy/morphEngine/libs/emu_engine/include/: AuthenticEMUZPlane.h
archive/legacy/morphEngine/libs/emu_engine/src/: AuthenticEMUZPlane.cpp
archive/legacy/morphEngine/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
archive/legacy/morphEngine/source/ui/: MorphEngineLookAndFeel.h  XtremeLeadLookAndFeel.cpp  XtremeLeadLookAndFeel.h
archive/legacy/ref/reference_code/: CMakeLists.txt  DSPEngine.h  EMUFilter.h  EMUModulation.h  MorphFilter.h
archive/legacy/vault/emu_extracted/: CMakeLists.txt  EMUFilter.cpp  FieldEngineFXProcessor.cpp  README.md
docs/: FAUST_FOLEYS_INTEGRATION.md  FieldEngineFX_Interface_Design.md  UI_REDESIGN_PLAN.md
examples/: OptimizedParameterSmoother.h
filter_requests/: filter_requests_rom_0A14_device_0.syx  filter_requests_rom_0B40_device_0.syx  filter_requests_rom_0F80_device_0.syx  filter_requests_rom_0FC0_device_0.syx
foleys/: FoleysFieldEngineProcessor.cpp  FoleysFieldEngineProcessor.h
libs/emu/: CMakeLists.txt  INDEX.md
libs/emu/adapter/: ZPlaneAdapter_FromAuthentic.h
libs/emu/api/: IZPlaneEngine.h  JsonShapeBank.h  StaticShapeBank.h
libs/emu/core/: BiquadCascade.h  ZPlaneLogFreqLUT.h  ZPoleMath.h
libs/emu/engines/: AuthenticEMUEngine.h  INDEX.md
libs/emu/qa/: ZPlane_STFTHarness.h
libs/emu/shapes/: EMUAuthenticTables.h  audity_shapes_B_48k.json
libs/emu/shapes/compiled/: compiled_shapes.json  shapes_A.csv  shapes_B.csv
libs/emu/spectral/: ZPlaneSpectralMask.cpp  ZPlaneSpectralMask.h
libs/emu/wrappers/: OversampledEngine.h
libs/fe_secretfx/: CMakeLists.txt
libs/fe_secretfx/include/fe/secretfx/: SecretFX.h
libs/fe_secretfx/src/: SecretFX.cpp
libs/pitchengine_dsp/: CMakeLists.txt
libs/pitchengine_dsp/include/: AuthenticEMUZPlane.h  AutoGain.h  FormantRescue.h  FormantShifter.h  HardTune.h  RealEMUData.h  Shifter.h  ZPlaneStyle.h  pitchengine_dsp.h
libs/pitchengine_dsp/src/: AuthenticEMUZPlane.cpp  ZPlaneStyle.cpp
libs/zplane_core/: CMakeLists.txt
libs/zplane_core/include/zplane/: AuthenticEMUEngine.h  BiquadCascade.h  IShapeBank.h  NonlinearStage.h  StaticShapeBank.h  ZPlaneSpectralMask.h
libs/zplane_core/src/: ZPlaneSpectralMask.cpp
libs/zplane_engine/: CMakeLists.txt
libs/zplane_engine/include/zplane_engine/: DspBridge.h
libs/zplane_engine/src/: DspBridge.cpp
libs/zplane_models/: CMakeLists.txt
libs/zplane_models/include/zplane_models/: EmuMapConfig.h  PackLoader.h  PackUtil.h  Zmf1.h  Zmf1Loader.h
libs/zplane_models/src/: PackLoader.cpp  PackUtil.cpp  Zmf1.cpp  Zmf1Loader.cpp
llama-docker/: .env  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
pitchEngine/: CMakeLists.txt  README.md
pitchEngine/resources/zlut/: pitchEngine_zLUT_ref48k.json
pitchEngine/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
pitchEngine/source/dsp/: PitchTracker.cpp  Snapper.cpp  ZPlaneStyle.cpp  ZPlaneStyle.h
pitchEngine/source/util/: SibilantGuard.h
plugins/: plugin.schema.json
reports/: preset_qa_report.json
scripts/: check_sr_morph.py  new-plugin.ps1  new-plugin.sh
tools/offline_tester/: CMakeLists.txt  generate_fixtures.py  generate_test.py  generate_test_wav.cpp  main.cpp  validate_fixtures.py
tools/x3/: CMakeLists.txt  x3_e5p1_walk.hpp  x3_index_sigscan.hpp  x3_learn.hpp  x3_probe.hpp  x3_rom_scan.cpp  x3_rom_scan.hpp  x3_sample_extract.cpp  x3_sample_extract.hpp
tools/x3/tools/: main.cpp
ui/: CartographyView.h  EnergyFlowVisualizer.h  FieldEngineFXEditor.cpp  GLViralEditor.cpp  SimpleEditor.cpp  SimpleEditor.h  TempleEditor.cpp  TemplePalette.h  ViralEditor.cpp
(+15861 files in other folders)
